crates/vacro-report/tests/ui/help.rs
fn main() {
    macros::parse_help!(my_string);
}
